2006-02-07  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (URI_CHAR): Accept the fragment delimiter '#' as
	valid URI character.

2006-02-07  Martin Soto  <martinsoto@users.sourceforge.net>

	* sqlmap/map.py: New module for mapping generic translated
	expressions to a relational friendly form.

	* serql/environment.py (ParseEnvironment.parse): Don't simplify
	here.

	* expression/rewrite.py (flattenAssoc.postOp): The Golden Rule of
	Python Iterators: Never iterate over a data structure and modify
	it at the same time.
	(simplify): Move the simplification code from serql/environment.py
	since it is generic.

2006-02-07  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (SelectContext.checkVariables) 
	(Parser.expandQNames): Adapted to new treeApplyMatch's calling
	convention.

	* expression/rewrite.py (exprApply): Renamed from treeApply. Now
	takes optional preorder and postorder operations.
	(exprMatchApply): Renamed from treeMatchApply. Also supports pre
	and postorder operations.
	(mapObject): Renamed from treeApplyObject.
	(flattenAssoc, flattenSelect, promoteSelect): Adapted to new
	treeApplyMatch's calling convention.

2006-02-06  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (SelectContext.checkVariables.operation) 
	(Parser.expandQNames.operation): Get rid of the subexprs
	parameter.

	* expression/rewrite.py (treeApply): Operate in place. The
	subexprs parameter isn't necessary anymore.
	(remakeExpr): Deleted.
	(treeMatchApply.operationWrapper, flattenAssoc.operation) 
	(promoteSelect.operation, flattenSelect.operation): Operate in
	place.

2006-02-06  Martin Soto  <martinsoto@users.sourceforge.net>

	* expression/rewrite.py (treeApply, treeApplyObject) 
	(flattenAssoc.operation): Use expressions as lists of
	subexpressions.

	* expression/nodes.py (ExpressionNode, ExpressionNode.__slots__) 
	(ExpressionNode.__init__, ExpressionNode._checkSubexprs) 