@@ -22,10 +22,14 @@ try:
             parser.parse(query, "sys.stdin")
     else:
         expr = parser.parse(sys.stdin, "sys.stdin")
-        mapper = map.RelationalMapper()
+        expr.prettyPrint()
+        print
+
+        mapper = map.VersionMapper(1)
         expr = mapper.mapExpression(expr)
         expr.prettyPrint()
         print
+
         print generate.generate(expr)
 except serql.Error, e:
     print >> sys.stderr, "Error:", str(e)
