@@ -1,5 +1,12 @@
 2006-02-07  Martin Soto  <martinsoto@users.sourceforge.net>
 
+	* sqlmap/map.py (RelationalMapper.mapExpression.postOp): Include
+	the join conditions in the expression.
+	(RelationalMapper.prettyPrint): Initial mapper with support for
+	the simple versioned database schema.
+
+2006-02-07  Martin Soto  <martinsoto@users.sourceforge.net>
+
 	* serql/serql.g (URI_CHAR): Accept the fragment delimiter '#' as
 	valid URI character.
 
